--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,30 +11,64 @@
   <title>News Scraper</title>
 
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+ 
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+ 
   <!-- Custom styles for this template -->
-  <link href="/styles/styles.css" rel="stylesheet">
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-  {{!-- <script src="/js/app.js"></script> --}}
-  
+  <link href="/public/styles/styles.css" rel="stylesheet" type="text/css">
 
 </head>
 
-<body id="onion">
+<body>
+  
+<div class="jumbotron">
+<div class="text-center">
+ <h1>Loud ass bullshit News Scraper</h1>
+  <a class ="btn btn-secondary" id="scrapeButton">Scrape New Articles</a>
+  <a class ="btn btn-secondary" id="clearButton">Clear Articles</a>
+  </div>
+</div>
+
+
+{{!-- <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color:turquoise">
+  <a class="navbar-brand" href="#"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <button class="nav-link" href="#">Saved Articles</button>
+      </li>
+      <li class="nav-item">
+        <button class="nav-link" href="#">Scrape New</button>
+      </li>
+    </ul>
+    <span class="navbar-text">
+    </span>
+  </div>
+</nav> --}}
+
+{{!-- <div class="container"> --}}
+ 
+ 
+ {{{body}}}
+
+
+{{!-- <script src="./js/app.js"></script> --}}
+
+{{!-- </div> --}}
   
 
-  {{{body}}}
+
+
+ 
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="./js/app.js"></script>
 
 </body>
 
