--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
   
 <div class="jumbotron">
 <div class="text-center">
- <h1>Loud ass bullshit News Scraper</h1>
+ <h1>Loudwire News Scraper</h1>
   <a class ="btn btn-secondary" id="scrapeButton">Scrape New Articles</a>
   <a class ="btn btn-secondary" id="clearButton">Clear Articles</a>
   </div>
